<?xml version="1.0"?>
<package format="2">
  <name>jimmbot_gazebo</name>
  <version>0.1.0</version>
  <description>mhRobotics jimmBOT Simulator bringup</description>

  <author email="m.halimi@gmail.com">Mergim Halimi</author>

  <maintainer email="m.halimi@gmail.com">Mergim Halimi</maintainer>

  <url type="website">www.mergimhalimi.com</url>
  <url type="repository">https://github.com/mh-Robotics/jimmbot_gazebo</url>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

  <exec_depend>roslaunch</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>jimmbot_control</exec_depend>
  <exec_depend>jimmbot_description</exec_depend>
  <exec_depend>rostopic</exec_depend>

  <export />

</package>
